force-app/main/default/objects/Deployment_Step__c/Deployment_Step__c.object-meta.xml
<CustomObject>
    <description>Holds information about steps to be executed during a deployment cycle that are not covered by metadata api or similar.</description>
    <label>Deployment Step</label>
    <nameField>
        <label>Deployment Step</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployment Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>