force-app/main/default/objects/Deployment_Step__c/fields/Author_Email__c.field-meta.xml
<CustomField>
    <fullName>Author_Email__c</fullName>
    <description>author of the manual step</description>
    <label>Author Email</label>
    <type>Email</type>
</CustomField>