force-app/main/default/objects/Deployment_Step__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>the content of the manual step that should be executed</description>
    <label>Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>