force-app/main/default/objects/Deployment_Step__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <description>Defines type of the content</description>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>anonymous apex</fullName>
            </value>
            <value>
                <fullName>rich text</fullName>
            </value>
            <value>
                <fullName>terminal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>