force-app/main/default/objects/Deployment_Step__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Describes the purpose of the manual step</description>
    <label>Description</label>
    <length>90000</length>
    <type>LongTextArea</type>
</CustomField>