force-app/main/default/objects/Deployment_Step__c/fields/Execution_required__c.field-meta.xml
<CustomField>
    <fullName>Execution_required__c</fullName>
    <description>True, if open executions are pending</description>
    <formula>Open_Executions__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Execution required</label>
    <type>Checkbox</type>
</CustomField>