force-app/main/default/objects/Deployment_Step__c/fields/IsDeprecated__c.field-meta.xml
<CustomField>
    <fullName>IsDeprecated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If manual step is not relevant anymore set this value to true</description>
    <label>IsDeprecated</label>
    <type>Checkbox</type>
</CustomField>