force-app/main/default/objects/Deployment_Step__c/fields/Last_Execution_at__c.field-meta.xml
<CustomField>
    <fullName>Last_Execution_at__c</fullName>
    <label>Last Execution at</label>
    <summarizedField>Deployment_Execution__c.Executed_at__c</summarizedField>
    <summaryForeignKey>Deployment_Execution__c.Manual_Deployment_Step__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>