force-app/main/default/objects/Deployment_Step__c/fields/Open_Executions__c.field-meta.xml
<CustomField>
    <fullName>Open_Executions__c</fullName>
    <description>Counts the open executions for a manual step</description>
    <label>Open Executions</label>
    <summaryFilterItems>
        <field>Deployment_Execution__c.Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>Deployment_Execution__c.Manual_Deployment_Step__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>