force-app/main/default/objects/Deployment_Step__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <description>Version Identifier that introduced this release</description>
    <label>Release (first occurred)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>