force-app/main/default/objects/Deployment_Step__c/fields/Reset_after_Sandbox_Refresh__c.field-meta.xml
<CustomField>
    <fullName>Reset_after_Sandbox_Refresh__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates, if the manual step needs to executed again in a sandbox after it was refreshed/created.</description>
    <label>Reset after Sandbox Refresh</label>
    <type>Checkbox</type>
</CustomField>