force-app/main/default/objects/Deployment_Step__c/fields/Reset_on_Install_of_Package__c.field-meta.xml
<CustomField>
    <fullName>Reset_on_Install_of_Package__c</fullName>
    <description>Comma separated list of packages that will reset this step when it is installed.</description>
    <label>Reset on Install of Package</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>