force-app/main/default/objects/Deployment_Step__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Brief title of the step.</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>