force-app/main/default/objects/Deployment_Step__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <description>category to group manual steps. Usually used to define if step needs to be executed before or after a metadata deployment.</description>
    <label>type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pre-deployment</fullName>
            </value>
            <value>
                <fullName>post-deployment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>