force-app/main/default/objects/Deployment_Step__c/listViews/Open.listView-meta.xml
<ListView>
    <fullName>Open</fullName>
    <columns>Release__c</columns>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>type__c</columns>
    <columns>Content_Type__c</columns>
    <columns>Execution_required__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Execution_required__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Open</label>
</ListView>